--- a/account.html
+++ b/account.html
@@ -11,6 +11,7 @@
 			<h2 class="acc_h2">Hello user!</h2>
 			<h3>Our Service will be ready in </h3><p class="acc_para" id="countdown"></p>
 			<br><a href="index.html" id= "logout-link">Logout</a>
+			<!-- jamsheed km -->
 		</center>
 	</body>
 </html>
